tests/golden/phase4a/compile-pass/closure_expr_inferred.rua
fn main() -> i64 {
    let increment = |value| value + 1;
    increment(41)
}
