tests/golden/phase4a/compile-fail/closure_param_cannot_infer.rua
fn main() {
    let unknown = |value| value;
}
